--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
+    "react": "^16.4.1",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.3.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "throttle-debounce": "^2.0.1"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
